# nlcli

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  makefile  pyproject.toml  readme.ipynb  readme.md
examples/: extra-requirements.txt  getting_started.py  readme.md  telegram_bot.py
nlcli/: __init__.py
