[tool.poetry]
name = "nlcli"
version = "0.1.2"
description = ""
authors = ["João Rafael <joaoraf@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3"
fann2 = "==1.0.7"
padatious = "*"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.7.1"
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
flake8 = "^3.8.3"

[tool.black]
line-length = 110

[tool.isort]
line_length = 110
multi_line_output = 3
include_trailing_comma = true
known_localfolder = "inutils,tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
